feat: settings of monorepo

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,2 +1,3 @@
-<app-nx-welcome></app-nx-welcome>
-<router-outlet></router-outlet>
+<tui-root>
+  <mui-select [items]="[0, 1, 2]">Селект</mui-select>
+</tui-root>
