--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,3 +1,10 @@
 <tui-root>
-  <mui-select [items]="[0, 1, 2]">Селект</mui-select>
+
+  <div style="display: flex; gap: 6px; padding: 16px;">
+    <mui-select style="flex-grow: 1;" [items]="[0, 1, 2]">Селект</mui-select>
+    <mui-select style="flex-grow: 1;" [items]="[0, 1, 2]" multiple>Селект-мульти</mui-select>
+    <mui-select style="flex-grow: 1;" [items]="users" [stringify]="stringifyUser">Селект-асинхронный</mui-select>
+    <mui-select style="flex-grow: 1;" [items]="usersPaginated" [stringify]="stringifyUser">Селект-пагинирующий</mui-select>
+  </div>
+    
 </tui-root>
